Name:                vtywidgets
Version:             0.0.6
Cabal-Version:       >= 1.2
Synopsis:            Purely FunctionaL User Interface
Category:            graphics
Description:
  This package contains a set of composable purely functional widgets.
  .
  Project wiki page: <http://haskell.org/haskellwiki/VtyWidgets>
  .
  &#169; 2009 by Eyal Lotem; BSD3 license.

Author:              Eyal Lotem
Maintainer:          eyal.lotem@gmail.com
--Homepage:            http://haskell.org/haskellwiki/VtyWidgets
--Package-Url:         http://code.haskell.org/VtyWidgets
Copyright:           (c) 2008 by Eyal Lotem
License:             BSD3
Stability:           experimental
build-type:          Simple

Library
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base >= 4 && < 5, split, fclabels, vty, containers,
                       array >= 0.2, dlist >= 0.5 && < 0.6
  Exposed-Modules:     Graphics.UI.VtyWidgets.Grid,
                       Graphics.UI.VtyWidgets.Keymap,
                       Graphics.UI.VtyWidgets.TermImage,
                       Graphics.UI.VtyWidgets.TextEdit,
                       Graphics.UI.VtyWidgets.TextView,
                       Graphics.UI.VtyWidgets.Scroll,
                       Graphics.UI.VtyWidgets.Bar,
                       Graphics.UI.VtyWidgets.Spacer,
                       Graphics.UI.VtyWidgets.FocusDelegator,
                       Graphics.UI.VtyWidgets.Overlay,
                       Graphics.UI.VtyWidgets.TableGrid,
                       Graphics.UI.VtyWidgets.SizeRange,
                       Graphics.UI.VtyWidgets.Placable,
                       Graphics.UI.VtyWidgets.Align,
                       Graphics.UI.VtyWidgets.Display,
                       Graphics.UI.VtyWidgets.Widget,
                       Data.Vector.Vector2,
                       Data.Vector.Rect
  Other-Modules:       Data.List.Utils,
                       Data.Function.Utils,
                       Data.Monoid.Utils,
                       Data.Array.Utils
                       Graphics.Vty.Utils

  ghc-options:         -Wall

executable vtywidgets-example
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base >= 4 && < 5, split, fclabels >= 0.4 && < 0.5, vty, containers,
                       array >= 0.2, dlist >= 0.5 && < 0.6, transformers >= 0.1.4.0 && < 0.2
  ghc-options : -O2 -Wall
  main-is: Example.hs
  ghc-prof-options:    -prof -auto-all 
